# seren

./: BUGS  Changelog  Makefile.in  README  TODO  adsp.c  adsp.h  audio.c  audio.h  blowfish.c  blowfish.h  camellia.c  camellia.h  cast-128.c  cast-128.h  common.c  common.h  config.h.in  configure  configure.ac  dhm.c  dhm.h  input.c  input.h  md5.c  md5.h  msgbook.c  msgbook.h  nc.c  nc.h  pc-engine-internal.h  pc-engine.c  pc-engine.h  random.c  random.h  recording.c  recording.h  rw.c  rw.h  seren.1  (+15 more)
debian/: changelog  control  copyright  docs  seren.manpages  shlibs.local
